--- a/src/applets/sample/Makefile.in
+++ b/src/applets/sample/Makefile.in
@@ -186,6 +186,8 @@ INTLTOOL__v_MERGE_ = @INTLTOOL__v_MERGE_@
 INTLTOOL__v_MERGE_0 = @INTLTOOL__v_MERGE_0@
 LD = @LD@
 LDFLAGS = @LDFLAGS@
+LIBFM_CFLAGS = @LIBFM_CFLAGS@
+LIBFM_LIBS = @LIBFM_LIBS@
 LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
 LIBTOOL = @LIBTOOL@
