--- a/data/ui/Makefile.am
+++ b/data/ui/Makefile.am
@@ -3,9 +3,22 @@ NULL=
 # GtkBuilder UI definition files
 uidir=$(datadir)/lxpanel2/ui
 ui_DATA= \
-	about.glade \
+	about.ui \
+	preferences.ui \
+	panel-preferences.ui \
 	$(NULL)
+
+# ui files for applets
+applet_ui_dir=$(uidir)/applets
+
+# blank applet
+blank_applet_uidir=$(applet_ui_dir)/blank
+blank_applet_ui_DATA=\
+	applets/blank/pref.ui \
+	$(NULL)
+
 
 EXTRA_DIST= \
 	$(ui_DATA) \
+	$(blank_applet_ui_DATA) \
 	$(NULL)
