--- a/src/applets/battery/Makefile.am
+++ b/src/applets/battery/Makefile.am
@@ -7,14 +7,11 @@ AM_CPPFLAGS = \
 	-DPACKAGE_LIB_DIR=\""$(libdir)/lxpanel2"\" \
 	-DPACKAGE_UI_DIR=\""$(datadir)/lxpanel2/ui"\" \
 	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
-	-DWNCK_I_KNOW_THIS_IS_UNSTABLE \
 	--include config.h \
 	$(NULL)
 # FIXME: --include config.h is not a cross-compiler solution and is gcc-only.
 
-# A sample dynamically loadable applet module demonstrating how to
-# make a applet module for lxpanel
-module_LTLIBRARIES = sample.la
+module_LTLIBRARIES = battery.la
 moduledir = $(libdir)/lxpanel2/applets
 
 VALAFLAGS = \
@@ -25,23 +22,17 @@ VALAFLAGS = \
 	--disable-warnings \
 	$(NULL)
 
-sample_la_SOURCES = \
-	sample-dynamic-applet.vala \
+battery_la_SOURCES = \
+	battery-applet.vala \
 	$(NULL)
 
-
 LXPANEL2_CFLAGS = \
-    -Iegg \
-    -Iapplets/na-tray \
 	$(GTK_CFLAGS) \
 	$(GIO_CFLAGS) \
-	$(WNCK_CFLAGS) \
-	$(GTOP_CFLAGS) \
-	$(MENU_CACHE_CFLAGS) \
 	$(X11_CFLAGS) \
 	$(NULL)
 
-sample_la_CFLAGS = \
+battery_la_CFLAGS = \
 	-shared \
 	-fPIC \
 	$(LXPANEL2_CFLAGS) \
@@ -49,12 +40,12 @@ sample_la_CFLAGS = \
 	$(ADDITIONAL_FLAGS) \
 	$(NULL)
 
-sample_la_LIBADD = \
+battery_la_LIBADD = \
 	$(GTK_LIBS) \
 	$(INTLLIBS) \
 	$(NULL)
 
-sample_la_LDFLAGS = \
+battery_la_LDFLAGS = \
 	-module \
 	-no-undefined \
 	-avoid-version \
