Install a pkgconfig file lxpanel-applet.pc for applet development.

--- a/configure.ac
+++ b/configure.ac
@@ -142,6 +142,7 @@ AC_CONFIG_FILES([
     Makefile
     src/Makefile
     src/lib/Makefile
+    src/lib/lxpanel-applet.pc
     src/applets/battery/Makefile
     src/applets/sample/Makefile
     data/Makefile
