Replace lxpanel in filenames with lxpanel2 to avoid conflicts with old lxpanel. Rename eggwrapbox.vapi to make it namespaced, prefixed with lxpanel2-. Remove dynamic applet sample. Move it to a separate project later.

--- a/configure.ac
+++ b/configure.ac
@@ -142,9 +142,8 @@ AC_CONFIG_FILES([
     Makefile
     src/Makefile
     src/lib/Makefile
-    src/lib/lxpanel-applet.pc
+    src/lib/lxpanel2-applet.pc
     src/applets/battery/Makefile
-    src/applets/sample/Makefile
     data/Makefile
     data/ui/Makefile
     data/ui/about.ui
