--- a/src/lib/lxpanel2-applet.pc.in
+++ b/src/lib/lxpanel2-applet.pc.in
@@ -14,5 +14,5 @@ Name: lxpanel-applet
 Description: A library used for lxpanel applet development
 Requires: gtk+-3.0 glib-2.0 gthread-2.0 gio-unix-2.0
 Version: @VERSION@
-Libs: -L${libdir} -llxpanel-applet
+Libs: -L${libdir} -llxpanel2-applet
 Cflags: -I${includedir}/lxpanel2
